RESOLVED FIXED258356
fast/editing/document-leak-altered-text-field.html is a flaky crash
https://bugs.webkit.org/show_bug.cgi?id=258356
Summary fast/editing/document-leak-altered-text-field.html is a flaky crash
Chris Dumez
Reported 2023-06-21 08:05:37 PDT
fast/editing/document-leak-altered-text-field.html is a flaky crash: ASSERTION FAILED: unifiedTextCheckerEnabled() /Volumes/Data/worker/macOS-AppleSilicon-Ventura-Debug-Build-EWS/build/Source/WebCore/editing/Editor.cpp(2829) : void WebCore::Editor::markAllMisspellingsAndBadGrammarInRanges(OptionSet<WebCore::TextCheckingType>, const std::optional<SimpleRange> &, const std::optional<SimpleRange> &, const std::optional<SimpleRange> &) 1 0x135ad3adc WTFCrash 2 0x283f31d10 WebCore::NetworkResourcesData::ResourceData::hasContent() const 3 0x283959a38 WebCore::Editor::markAllMisspellingsAndBadGrammarInRanges(WTF::OptionSet<WebCore::TextCheckingType>, std::__1::optional<WebCore::SimpleRange> const&, std::__1::optional<WebCore::SimpleRange> const&, std::__1::optional<WebCore::SimpleRange> const&) 4 0x2838f573c WebCore::AlternativeTextController::timerFired() 5 0x28391ab54 decltype(*std::declval<WebCore::AlternativeTextController*&>().*std::declval<void (WebCore::AlternativeTextController::*&)()>()()) std::__1::__invoke[abi:v15006]<void (WebCore::AlternativeTextController::*&)(), WebCore::AlternativeTextController*&, void>(void (WebCore::AlternativeTextController::*&)(), WebCore::AlternativeTextController*&) 6 0x28391aad4 std::__1::__bind_return<void (WebCore::AlternativeTextController::*)(), std::__1::tuple<WebCore::AlternativeTextController*>, std::__1::tuple<>, __is_valid_bind_return<void (WebCore::AlternativeTextController::*)(), std::__1::tuple<WebCore::AlternativeTextController*>, std::__1::tuple<>>::value>::type std::__1::__apply_functor[abi:v15006]<void (WebCore::AlternativeTextController::*)(), std::__1::tuple<WebCore::AlternativeTextController*>, 0ul, std::__1::tuple<>>(void (WebCore::AlternativeTextController::*&)(), std::__1::tuple<WebCore::AlternativeTextController*>&, std::__1::__tuple_indices<0ul>, std::__1::tuple<>&&) 7 0x28391aa8c std::__1::__bind_return<void (WebCore::AlternativeTextController::*)(), std::__1::tuple<WebCore::AlternativeTextController*>, std::__1::tuple<>, __is_valid_bind_return<void (WebCore::AlternativeTextController::*)(), std::__1::tuple<WebCore::AlternativeTextController*>, std::__1::tuple<>>::value>::type std::__1::__bind<void (WebCore::AlternativeTextController::*&)(), WebCore::AlternativeTextController*>::operator()[abi:v15006]<>() 8 0x28391aa30 WTF::Detail::CallableWrapper<std::__1::__bind<void (WebCore::AlternativeTextController::*&)(), WebCore::AlternativeTextController*>, void>::call() 9 0x2800265b4 WTF::Function<void ()>::operator()() const 10 0x282dfefac WebCore::Timer::fired() 11 0x284774d98 WebCore::ThreadTimers::sharedTimerFiredInternal() 12 0x28477d270 WebCore::ThreadTimers::setSharedTimer(WebCore::SharedTimer*)::$_0::operator()() const 13 0x28477d21c WTF::Detail::CallableWrapper<WebCore::ThreadTimers::setSharedTimer(WebCore::SharedTimer*)::$_0, void>::call() 14 0x2800265b4 WTF::Function<void ()>::operator()() const 15 0x28471e624 WebCore::MainThreadSharedTimer::fired()
Attachments
Chris Dumez
Comment 1 2023-06-21 13:30:26 PDT
EWS
Comment 2 2023-06-21 17:02:22 PDT
Committed 265380@main (d3bab4fdb4dc): <https://commits.webkit.org/265380@main> Reviewed commits have been landed. Closing PR #15156 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2023-06-21 17:03:17 PDT
Note You need to log in before you can comment on or make changes to this bug.